# teo-sql-connector

./: Cargo.toml
src/: lib.rs
src/coder/: mod.rs
src/coder/decode/: mod.rs
src/coder/encode/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/connector/: connection.rs  connector.rs  mod.rs  transaction.rs
src/execution/: mod.rs
src/exts/: database_type.rs  index.rs  mod.rs  sort.rs
src/migration/: migrate.rs
src/query/: mod.rs
src/schema/: dialect.rs  mod.rs  table.rs
src/schema/column/: decoder.rs  mod.rs
src/schema/type/: decoder.rs  encoder.rs  mod.rs
src/schema/value/: decode.rs  encode.rs
src/stmts/: mod.rs
src/stmts/alter_table/: add.rs  drop_column.rs  mod.rs  modify.rs
src/stmts/create/: database.rs  index.rs  mod.rs  table.rs
src/stmts/delete_from/: mod.rs
src/stmts/describe/: mod.rs
src/stmts/drop/: database.rs  index.rs  mod.rs  table.rs
src/stmts/insert_into/: mod.rs
src/stmts/select/: mod.rs  where.rs
src/stmts/show/: index_from.rs  mod.rs  tables.rs
src/stmts/update/: mod.rs
src/stmts/use/: database.rs  mod.rs
src/url/: mod.rs
