[package]
name = "teo-sql-connector"
version = "0.2.1-alpha.4"
edition = "2021"
description = "SQL connector for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-sql-connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = "0.2.0"
teo-teon = "0.2.0"
teo-parser = "0.2.0"
teo-runtime = "0.2.1-alpha.4"
quaint-forked = { version = "0.1.3-alpha.5", features = [ "all" ] }
whoami = { version = "1.4.1" }
async-recursion = "1.0.5"
async-trait = "0.1.74"
array_tool = "1.0.3"
once_cell = "1.19"
maplit = "1.0.2"
indexmap = { version = "2.1.0", features = ["serde"] }
path-absolutize = "3.1.1"
url = "2.5"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = "=0.3.1"
itertools = "0.12"
regex = "1.10.2"
snailquote = "0.3.1"
key-path = "0.2.0"