[package]
name = "teo-sql-connector"
version = "0.3.8"
edition = "2021"
description = "SQL connector for Teo"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-sql-connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = { version = "0.3.5", path = "../teo-result" }
teo-parser = { version = "0.3.0", path = "../teo-parser" }
teo-runtime = { version = "0.3.8", path = "../teo-runtime" }
quaint-forked = { version = "0.1.3-alpha.8", features = [ "all" ] }
whoami = { version = "1.5.2" }
async-recursion = "1.1"
async-trait = "0.1"
array_tool = "1.0.3"
once_cell = "1.20"
maplit = "1.0.2"
indexmap = { version = "2.6.0", features = ["serde"] }
path-absolutize = "3.1.1"
url = "2.5"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = "=0.3.1"
itertools = "0.13"
regex = "1.11.1"
snailquote = "0.3.1"
key-path = "0.2.3"